update prompt chat + interface group